<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <View
            android:id="@+id/upper_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <View
            android:id="@+id/lower_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upper_view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/total_bill_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/raleway"
            android:text="@string/total_bill"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/bill_text_field"
            app:layout_constraintEnd_toEndOf="@+id/bill_text_field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/bill_text_field"
            app:layout_constraintTop_toBottomOf="@+id/upper_view" />

        <EditText
            android:id="@+id/bill_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/bill_hint"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/bill_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/upper_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/upper_view"
            app:layout_constraintTop_toBottomOf="@+id/total_bill_text" />

        <TextView
            android:id="@+id/select_tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/select_tip"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/percent_10_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upper_view" />

        <ToggleButton
            android:id="@+id/percent_10_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/poppins"
            android:text="@string/percent_10"
            android:textColor="@android:color/white"
            android:textOff="@string/percent_10"
            android:textOn="@string/percent_10"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/split_text"
            app:layout_constraintEnd_toStartOf="@+id/percent_20_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/percent_0_button"
            app:layout_constraintTop_toBottomOf="@+id/select_tip_text" />

        <ToggleButton
            android:id="@+id/percent_0_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/percent_0"
            android:textColor="@color/colorPrimaryDark"
            android:textOff="@string/percent_0"
            android:textOn="@string/percent_0"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/percent_10_button"
            app:layout_constraintEnd_toStartOf="@+id/percent_10_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/percent_10_button" />

        <ToggleButton
            android:id="@+id/percent_20_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/percent_20"
            android:textColor="@color/colorPrimaryDark"
            android:textOff="@string/percent_20"
            android:textOn="@string/percent_20"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/percent_10_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/percent_10_button"
            app:layout_constraintTop_toTopOf="@+id/percent_10_button" />

        <TextView
            android:id="@+id/split_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/choose_split"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/split_count_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percent_10_button" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/minus_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/split_count_text"
            app:layout_constraintEnd_toStartOf="@+id/split_count_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/split_count_text" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/plus_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/split_count_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/split_count_text"
            app:layout_constraintTop_toTopOf="@+id/split_count_text" />

        <TextView
            android:id="@+id/split_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_split"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plus_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minus_button"
            app:layout_constraintTop_toBottomOf="@+id/split_text" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="@dimen/button_padding"
            android:paddingTop="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/calculate_button"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_count_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>